[Home] Correct display bug on mobile

--- a/src/styles/_homepage.styl
+++ b/src/styles/_homepage.styl
@@ -16,7 +16,7 @@
 
 		+bp-max(md)
 			padding-top 12vh
-			height 100vh
+			height 110vh
 			text-align center
 
 	.introduction-title
@@ -37,6 +37,9 @@
 	.introduction-reassurance
 		font-size 0.875rem
 		padding 0.75rem 0 0 0
+
+		+bp-max(md)
+			text-align center
 
 		// &::after
 		// 	content: ""
